--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
+    "ua-parser-js": "^2.0.7",
     "vaul": "1.1.2"
   },
   "devDependencies": {
